Image and description tags

--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,13 @@
 
         <!-- NAME -->
         <title>Carles Rojas - Portfolio</title>
+
+        <!-- NAME -->
+        <meta property="og:title" content="Carles Rojas - Portfolio"/>
+        <meta property="og:image" content="%PUBLIC_URL%/splashscreen.jpg"/>
+        <meta property="og:description" content="A showcase of different projects I've been involved in. Including Web Development, Game Development & Product Design."/>
+        <meta property="og:url" content="https://carlesrojas.netlify.app/" />
+
     </head>
     <body>
         <!-- APP -->
